// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackChild renders null 1`] = `<DocumentFragment />`;

exports[`StackChild renders within a Stack with custom order 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  color: #2e2e2e;
  border-radius: 0;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-2:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:active:not(:disabled) {
  border-width: 1px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-5 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              child 1
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              child 2
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              child 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StackChild renders within a Stack, when Stack is a list 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  color: #2e2e2e;
  border-radius: 0;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-2:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:active:not(:disabled) {
  border-width: 1px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-5 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

<ul
    class="emotion-0"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              child 1
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-6"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              child 2
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-11"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              child 3
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StackChild renders within a Stack, with align self property 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  color: #2e2e2e;
  border-radius: 0;
}

.emotion-2 svg {
  width: 16px;
  height: 16px;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-2:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:active:not(:disabled) {
  border-width: 1px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-5 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              child 1
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              child 2
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              child 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
